--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
 <body>
     <div class="container-fluid">
-        <h1 class="toptext text-center">Kehrli.Tech</h1>
+        <h1 class="toptext text-center"><span id="K">K</span>ehrli.Tech</h1>
     </div>
-    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark nav-bg">
         <a class="navbar-brand" href="#">Kehrli.Tech</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -66,7 +66,8 @@
         <div class="row">
             <div class="col-sm">
                 <h3>DALL-E</h3>
-                <p>DALL-E ist ein künstlicher Intelligenz-Modell von OpenAI, das in der Lage ist, 2D-Bilder auf Basis
+                <p class="leseText">
+                    DALL-E ist ein künstlicher Intelligenz-Modell von OpenAI, das in der Lage ist, 2D-Bilder auf Basis
                     von Textbeschreibungen zu generieren. Es kann dazu verwendet werden, um eine Vielzahl von
                     verschiedenen Bildern zu erstellen, von Landschaften bis hin zu Futuristischen Maschinen und
                     fantastischen Kreaturen. DALL-E nutzt eine fortschrittliche Technologie namens Generative Pretrained
@@ -115,11 +116,16 @@
                 <h3 class="anz3" id="artNr3">Cute robotic fox flying in Space playing with an Key painted in Oil
                     expressive</h3>
                 <h3>Prompt:</h3>
-                Im Zusammenhang mit einer Bildgenerator-KI kann ein Prompt eine spezifische Anweisung oder Aufforderung
-                an das System sein, ein neues Bild zu generieren, das bestimmte Eigenschaften oder Merkmale aufweist.
-                Der Prompt kann beispielsweise eine Beschreibung des gewünschten Bildes, eine Vorlage oder eine Sammlung
-                von Beispielbildern enthalten. Das KI-System verwendet dann diese Informationen, um ein neues,
-                generiertes Bild zu erstellen, das den Anforderungen des Prompts entspricht.
+                <p class="leseText">
+                    Im Zusammenhang mit einer Bildgenerator-KI kann ein Prompt eine spezifische Anweisung oder
+                    Aufforderung
+                    an das System sein, ein neues Bild zu generieren, das bestimmte Eigenschaften oder Merkmale
+                    aufweist.
+                    Der Prompt kann beispielsweise eine Beschreibung des gewünschten Bildes, eine Vorlage oder eine
+                    Sammlung
+                    von Beispielbildern enthalten. Das KI-System verwendet dann diese Informationen, um ein neues,
+                    generiertes Bild zu erstellen, das den Anforderungen des Prompts entspricht.
+                </p>
             </div>
 
         </div>
@@ -135,14 +141,16 @@
         <div class="row">
             <div class="col">
                 <h3>Zukunft der Technologie:</h3>
-                <p>
+
+                <p class="leseText">
                     Die Zukunft der Technologie ist voller Möglichkeiten und Herausforderungen. Einige der wichtigsten
                     Entwicklungen, die wir in den kommenden Jahren sehen werden, sind die fortschreitende
                     Automatisierung
                     und Künstliche Intelligenz, die Verbreitung von 5G-Netzwerken und das Internet der Dinge, sowie die
                     zunehmende Verlagerung von Daten und Anwendungen in die Cloud.
                 </p>
-                <p>
+
+                <p class="leseText">
                     Eines der wichtigsten Themen in Bezug auf die Automatisierung und KI ist die Auswirkung auf die
                     Arbeitsplätze. Es wird erwartet, dass viele Arbeitsplätze durch Automatisierung ersetzt werden,
                     während
@@ -151,14 +159,16 @@
                     Fachkräften
                     für diese neuen Technologien konzentrieren.
                 </p>
-                <p>
+
+                <p class="leseText">
                     5G-Netzwerke werden die Verbindung von Geräten und die Übertragung von Daten beschleunigen und
                     verbessern und damit die Entwicklung von innovativen Anwendungen und Diensten ermöglichen. Dazu
                     gehören
                     autonomes Fahren, Echtzeit-Virtual- und Augmented-Reality-Anwendungen und die Automatisierung von
                     Fabriken und Lagerhäusern.
                 </p>
-                <p>
+
+                <p class="leseText">
                     Das Internet der Dinge ermöglicht es, Dinge und Geräte mit dem Internet zu verbinden und damit die
                     Sammlung und Analyse von Daten zu erleichtern. Dies wiederum wird die Entwicklung von neuen
                     Anwendungen
@@ -166,7 +176,8 @@
                     Gesundheitstechnologien, intelligente Energiemanagement-Systeme und die Automatisierung von
                     Gebäuden.
                 </p>
-                <p>
+
+                <p class="leseText">
                     All diese Entwicklungen werden dazu beitragen, das Leben der Menschen zu verbessern und neue
                     Möglichkeiten zu schaffen, aber sie stellen auch neue Herausforderungen dar, insbesondere in Bezug
                     auf
@@ -177,20 +188,28 @@
 
             <div class="col">
                 <h3>Erneuerbare Energie:</h3>
-                <p>Erneuerbare Energien sind die Zukunft der Energieversorgung. Sie sind sauber, unerschöpflich und
+
+                <p class="leseText">Erneuerbare Energien sind die Zukunft der Energieversorgung. Sie sind sauber,
+                    unerschöpflich und
                     tragen dazu bei, die Klimakrise zu bekämpfen. Solarenergie, Windenergie, Wasser- und Biomasseenergie
                     sind die wichtigsten erneuerbaren Energien. Sie sind eine wichtige Alternative zu fossilen
                     Brennstoffen wie Kohle, Öl und Gas, die zur Erderwärmung und zur Verschmutzung der Luft und des
                     Wassers beitragen.</p>
-                <p>Die Solarenergie ist eine der am schnellsten wachsenden erneuerbaren Energien und wird vor allem
+
+                <p class="leseText">Die Solarenergie ist eine der am schnellsten wachsenden erneuerbaren Energien und
+                    wird vor allem
                     durch Photovoltaikanlagen erzeugt. Windenergie wird durch Windturbinen erzeugt und ist vor allem in
                     Küstengebieten und auf offenen Flächen einsetzbar. Wasser- und Biomasseenergie werden durch die
                     Nutzung von Wasserkraftwerken und Biomasse-Kraftwerken erzeugt.</p>
-                <p>Eine wichtige Tatsache ist, dass die Erneuerbare Energien nicht nur zur Reduzierung von
+
+                <p class="leseText">Eine wichtige Tatsache ist, dass die Erneuerbare Energien nicht nur zur Reduzierung
+                    von
                     Treibhausgasemissionen beitragen, sondern auch zur Schaffung von Arbeitsplätzen, zur Verbesserung
                     der Energieversorgungssicherheit und zur Unabhängigkeit von fossilen Brennstoffimporten beitragen.
                 </p>
-                <p>Die Erneuerbare Energien sind in vielen Ländern bereits ein wichtiger Bestandteil der
+
+                <p class="leseText">Die Erneuerbare Energien sind in vielen Ländern bereits ein wichtiger Bestandteil
+                    der
                     Energieversorgung, aber es gibt immer noch viel Raum für Wachstum und Entwicklung. Investitionen in
                     erneuerbare Energien sind wichtig, um die Kosten zu senken und die Technologie weiter zu verbessern.
                     Es ist wichtig, dass Regierungen, Unternehmen und Verbraucher gemeinsam dafür sorgen, dass
