--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                         <a class="dropdown-item" href="#Chat-GPT">Chat-GPT</a>
                     </div>
                 </li>
-                <!--  <li class="nav-item">
+                 <li class="nav-item">
                     <a class="nav-link" href="Pytagoras.html">Pytagoras Rechner</a>
-                </li>-->
+                </li>
             </ul>
         </div>
 
