--- a/Pytagoras.html
+++ b/Pytagoras.html
@@ -25,9 +25,9 @@
 </head>
 
 <body>
-    <div class="container-fluid">
-        <h1 class="toptext text-center">Kehrli.Tech</h1>
-    </div>
+  <div class="container-fluid">
+    <h1 class="toptext text-center"><img src="imgs/daniel.png" alt="Kehrli.Tech" width="25%"></h1>
+</div>
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark nav-bg">
         <a class="navbar-brand" href="#">Kehrli.Tech</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
