--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body>
     <div class="container-fluid">
-        <h1 class="toptext text-center"><span id="K">K</span>ehrli.Tech</h1>
+        <h1 class="toptext text-center"><img src="imgs/daniel.png" alt="Kehrli.Tech" width="25%"></h1>
     </div>
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark nav-bg">
         <a class="navbar-brand" href="#">Kehrli.Tech</a>
