--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 
 <body>
     <div class="container-fluid">
-        <h1 class="toptext text-center"><img src="imgs/daniel.png" alt="Kehrli.Tech" width="25%"></h1>
+        <h1 class="toptext text-center"><img src="imgs/daniel.png" alt="Kehrli.Tech" class="mx-auto d-block" width="200" style="padding: 1%;"></h1>
     </div>
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark nav-bg">
-        <a class="navbar-brand" href="#">Kehrli.Tech</a>
+        <img src="imgs/LogoLiegend.png" alt="Kehrli.tech" href="#" class="img-fluid" width="200">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
