--- a/Pytagoras.html
+++ b/Pytagoras.html
@@ -25,11 +25,11 @@
 </head>
 
 <body>
-  <div class="container-fluid">
-    <h1 class="toptext text-center"><img src="imgs/daniel.png" alt="Kehrli.Tech" width="25%"></h1>
-</div>
+    <div class="container-fluid">
+        <h1 class="toptext text-center"><img src="imgs/daniel.png" alt="Kehrli.Tech" class="mx-auto d-block" width="200" style="padding: 1%;"></h1>
+    </div>
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark nav-bg">
-        <a class="navbar-brand" href="#">Kehrli.Tech</a>
+        <a href="index.html"><img src="imgs/LogoLiegend.png" alt="Kehrli.tech" class="img-fluid" width="200"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -38,7 +38,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="index.html" role="button" data-toggle="dropdown"
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown"
                         aria-expanded="false">
                         Künstliche Intelligenz
                     </a>
@@ -47,7 +47,7 @@
                         <a class="dropdown-item" href="index.html#Chat-GPT">Chat-GPT</a>
                     </div>
                 </li>
-                <li class="nav-item">
+                 <li class="nav-item">
                     <a class="nav-link" href="Pytagoras.html">Pytagoras Rechner</a>
                 </li>
             </ul>
